--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
     <a href="https://www.rizwanrockzz.tech" target="_blank">My Website</a>
   </p>
 
+  
   <p>
     My name is Rizwan .I am 18 years old.I am passionate in coding.I know
     Programming languages like C,C++,Python3.I am currently studying B-Tech in
     vr siddhartha college,I did my intermediate from Sri Chaithanya jr
     college,I did my schooling from ravindra bharathi.My hobby is
-    Photography.I love web development and i have made some awesome websites
-    too and hosted it on github.
+    Photography.I love web development and i have made some awesome websites too and hosted it on github.
+    In my free time i like to create good looking and responsive websites.I am always eager and curious to learn new technologies and use it to solve real life problems.
   </p>
 
   <b>
@@ -79,6 +80,7 @@
   </b>
   <ol>
     <li>Photography</li>
+    <li>Creating Responsive Websites</li>
   </ol>
   <b>
     <p>My Video Introduction : </p>
