--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <img src="https://rizwanrockzz.github.io/i/rizwan.png" alt="rizwan" width="280" height="200" align="right" />
 
   <h3 style="color: blue">MOHAMMAD RIZWANULLAH</h3>
-  <p>Phone : 7416263730</p>
-  <p>Email : rizwanrockzz13@gmail.com</p>
+  <p><b>Phone :</b> 7416263730</p>
+  <p><b>Email :</b> rizwanrockzz13@gmail.com</p>
   <p>
     <a href="https://www.codechef.com/users/rizwan_rockzz" target="_blank">CodeChef</a>
   </p>
